# inventory-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  config.py  db.py
app/models/: __init__.py  inventory.py
app/repositories/: __init__.py  inventory_repo.py
app/routers/: __init__.py  api_inventory.py  pages.py
app/services/: __init__.py  inventory_service.py
app/static/css/: style.css
app/static/js/: inventory.js
app/templates/: base.html  create.html  detail.html  edit.html  index.html
tests/: test_api_inventory.py  test_inventory_service.py
